--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
 
 	<nav>
-		<img src="\RealPagHOME\imagenes\66-667897_victorian-border-frame-png.png" id="marco">
+		<img src="\PataRancia.github.io\RealPagHOME\imagenes\66-667897_victorian-border-frame-png.png" id="marco">
 		<button class="contenidohome">
 		<a href="\RealPagHOME\Amba\diseñodeinteriores.html">Diseño de interiores</a>
 		<a href=\RealPagHOME\Xilijibiñij\Historia.html>Historia</a>
