--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Casas, su estrucrura, decoración e historia. Presentamos información, imágenes, y videos sobre estos 3 temas principales que se irán desglozando en el contenido.">
 	<meta name="author" content="1- Ambar Donají R.O. 2- Rodrigo Xilot C. 3- Fabiola Cuevas M.">
-	<link rel="icon" type="image/png" href="\RealPagHOME\patitocasa.png">
+	<link rel="icon" type="image/png" href="RealPagHOME\patitocasa.png">
 	<link rel="stylesheet" type="text/css" href="PStyleHOME.css">
 
 	<title>Mi Hogar... Inicio</title>
@@ -13,7 +13,7 @@
 <header>
 
 	<nav>
-		<img src="\RealPagHOME\imagenes\66-667897_victorian-border-frame-png.png" id="marco">
+		<img src="RealPagHOME\imagenes\66-667897_victorian-border-frame-png.png" id="marco">
 		<button class="contenidohome">
 		<a href="\RealPagHOME\Amba\diseñodeinteriores.html">Diseño de interiores</a>
 		<a href=\RealPagHOME\Xilijibiñij\Historia.html>Historia</a>
