--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
         	<div class="cubitounov"> <p>Diseño de interiores</p>
-        		<img src="/RealPagHOME/imagenes/diseñodeinterioresgi.gif" width="100%" id="imgdeDiseñoDInte" title="El diseño de interiores es una disciplina profesional que se ocupa de crear y diseñar espacios interiores. Su objetivo es manipular el volumen espacial y tratar la superficie para lograr una realidad estética que satisfaga nuestros sentidos. A diferencia de la decoración, el diseño de interiores considera aspectos arquitectónicos, ecológicos, psicológicos y de diseño industrial.">
+        		<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/diseñodeinterioresgi.gif" width="100%" id="imgdeDiseñoDInte" title="El diseño de interiores es una disciplina profesional que se ocupa de crear y diseñar espacios interiores. Su objetivo es manipular el volumen espacial y tratar la superficie para lograr una realidad estética que satisfaga nuestros sentidos. A diferencia de la decoración, el diseño de interiores considera aspectos arquitectónicos, ecológicos, psicológicos y de diseño industrial.">
         		<button id="conocemas"> <a href="\RealPagHOME\Amba\diseñodeinteriores.html"> Conoce más </a> </button>
 
         	</div>
