--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Casas, su estrucrura, decoración e historia. Presentamos información, imágenes, y videos sobre estos 3 temas principales que se irán desglozando en el contenido.">
 	<meta name="author" content="1- Ambar Donají R.O. 2- Rodrigo Xilot C. 3- Fabiola Cuevas M.">
-	<link rel="icon" type="image/png" href="RealPagHOME\patitocasa.png">
+	<link rel="icon" type="image/png" href="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/patitocasa.png?raw=true">
 	<link rel="stylesheet" type="text/css" href="PStyleHOME.css">
 
 	<title>Mi Hogar... Inicio</title>
@@ -16,7 +16,7 @@
 		<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/66-667897_victorian-border-frame-png.png?raw=true" id="marco">
 		<button class="contenidohome">
 		<a href="\RealPagHOME\Amba\diseñodeinteriores.html">Diseño de interiores</a>
-		<a href=\RealPagHOME\Xilijibiñij\Historia.html>Historia</a>
+		<a href="\RealPagHOME\Xilijibiñij\Historia.html">Historia</a>
 		<a href="\RealPagHOME\HomeEstructura.html">Estructura</a>
 		<a href="\RealPagHOME\index.html"> Inicio</a>
 		</button>
