--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/66-667897_victorian-border-frame-png.png?raw=true" id="marco">
 		<button class="contenidohome">
 		<a href="\RealPagHOME\Amba\diseñodeinteriores.html">Diseño de interiores</a>
-		<a href="\RealPagHOME\Xilijibiñij\Historia.html">Historia</a>
+		<a href="Historia.html">Historia</a>
 		<a href="\RealPagHOME\HomeEstructura.html">Estructura</a>
 		<a href="\RealPagHOME\index.html"> Inicio</a>
 		</button>
