--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 	<nav>
 		<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/66-667897_victorian-border-frame-png.png?raw=true" id="marco">
 		<button class="contenidohome">
-		<a href="\RealPagHOME\Amba\diseñodeinteriores.html">Diseño de interiores</a>
-		<a href="Historia.html">Historia</a>
-		<a href="\RealPagHOME\HomeEstructura.html">Estructura</a>
-		<a href="\RealPagHOME\index.html"> Inicio</a>
+		<a href="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/dise%C3%B1odeinteriores.html">Diseño de interiores</a>
+		<a href="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/Historia.html">Historia</a>
+		<a href="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/HomeEstructura.html">Estructura</a>
+		<a href="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/index.html"> Inicio</a>
 		</button>
 	</nav>
 	</header>
