--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
 
 
         	<div class="cubitounov"> <p>Diseño de interiores</p>
-        		<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/diseñodeinterioresgi.gif" width="100%" id="imgdeDiseñoDInte" title="El diseño de interiores es una disciplina profesional que se ocupa de crear y diseñar espacios interiores. Su objetivo es manipular el volumen espacial y tratar la superficie para lograr una realidad estética que satisfaga nuestros sentidos. A diferencia de la decoración, el diseño de interiores considera aspectos arquitectónicos, ecológicos, psicológicos y de diseño industrial.">
-        		<button id="conocemas"> <a href="\RealPagHOME\Amba\diseñodeinteriores.html"> Conoce más </a> </button>
+        		<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/dise%C3%B1odeinterioresgi.gif?raw=true" width="100%" id="imgdeDiseñoDInte" title="El diseño de interiores es una disciplina profesional que se ocupa de crear y diseñar espacios interiores. Su objetivo es manipular el volumen espacial y tratar la superficie para lograr una realidad estética que satisfaga nuestros sentidos. A diferencia de la decoración, el diseño de interiores considera aspectos arquitectónicos, ecológicos, psicológicos y de diseño industrial.">
+        		<button id="conocemas"> <a href="diseñodeinteriores.html"> Conoce más </a> </button>
 
         	</div>
         	<div class="cubitodosv"> <p>Historia</p> <br>
         	
-        		<img src="/RealPagHOME/imagenes/historiaDlaArquitectura.gif" width="100%" id="gifhistoriaarqui" title="La historia de la arquitectura es la rama de la historia del arte que estudia la evolución histórica de la arquitectura, sus principios, ideas y realizaciones.">
-        		<button id="conocemas"> <a href="\RealPagHOME\Xilijibiñij\Historia.html"> Conoce más </a> </button>
+        		<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/historiaDlaArquitectura.gif?raw=true" width="100%" id="gifhistoriaarqui" title="La historia de la arquitectura es la rama de la historia del arte que estudia la evolución histórica de la arquitectura, sus principios, ideas y realizaciones.">
+        		<button id="conocemas"> <a href="Historia.html"> Conoce más </a> </button>
         	</div>
 
         	<div class="cubitotresv"> <p>Estructura</p> <br>
-        		<img src="/RealPagHOME/imagenes/giphyplanosreal.gif" width="100%" id="gifplanosarqui" title="Estructura en arquitectura se refiere al sistema de elementos que sostienen y distribuyen las cargas de un edificio hacia el suelo de manera segura y eficiente. Más allá de su función puramente técnica, la estructura también influye en la estética y la experiencia espacial de un edificio.">
+        		<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/giphyplanosreal.gif?raw=true" width="100%" id="gifplanosarqui" title="Estructura en arquitectura se refiere al sistema de elementos que sostienen y distribuyen las cargas de un edificio hacia el suelo de manera segura y eficiente. Más allá de su función puramente técnica, la estructura también influye en la estética y la experiencia espacial de un edificio.">
 
 
-        		<button id="conocemas"> <a href="\RealPagHOME\imagenes\HomeEstructura.html"> Conoce más </a> </button>
+        		<button id="conocemas"> <a href="HomeEstructura.html"> Conoce más </a> </button>
           </div>
 
 
@@ -75,9 +75,9 @@
 
 <section id="pastoconlasredes">
 
-	<span id="bordeboton"> <img src="/RealPagHOME/imagenes/coronadeflores.png" width="150px"> <button onclick="window.location.href='https://www.instagram.com/marci_patarancia?¡qsh=MTlrYWRkY2FjrnUweQ=='"> Instagram </button> </span>
-	<span id="bordeboton"> <img src="/RealPagHOME/imagenes/coronadeflores.png" width="150px"> <button onclick="window.location.href='https://www.pinterest.com/ZazWiwiWWWWw'"> Pinterest </button> </span>
-	<span id="bordeboton"> <img src="/RealPagHOME/imagenes/coronadeflores.png" width="150px"> <button onclick="window.location.href='https://open.spotify.com/playlist/6ARxFYN99WbnkvSCGJJ2w7?si=cdcaf4881ae34d42'"> Spotify </button> </span>
+	<span id="bordeboton"> <img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/coronadeflores.png?raw=true" width="150px"> <button onclick="window.location.href='https://www.instagram.com/marci_patarancia?¡qsh=MTlrYWRkY2FjrnUweQ=='"> Instagram </button> </span>
+	<span id="bordeboton"> <img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/coronadeflores.png?raw=true" width="150px"> <button onclick="window.location.href='https://www.pinterest.com/ZazWiwiWWWWw'"> Pinterest </button> </span>
+	<span id="bordeboton"> <img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/coronadeflores.png?raw=true" width="150px"> <button onclick="window.location.href='https://open.spotify.com/playlist/6ARxFYN99WbnkvSCGJJ2w7?si=cdcaf4881ae34d42'"> Spotify </button> </span>
 
 </section>
 
