--- a/diseñodeinteriores.html
+++ b/diseñodeinteriores.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>diseño de interiores</title>
 	<link rel="stylesheet" type="text/css" href="DiseñoInterioresStyle.css">
-	<link rel="icon" type="image/png" href="\RealPagHOME\patitocasa.png">
+	<link rel="icon" type="image/png" href="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/patitocasa.png?raw=true">
 </head>
 <header>
 
@@ -13,15 +13,15 @@
 	<h1 id="tituloprincipal">Diseño De Interiores</h1><br>
 	<nav>
 
-		<img src="\RealPagHOME\imagenes\66-667897_victorian-border-frame-png.png" id="marco">
+		<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/66-667897_victorian-border-frame-png.png?raw=true" id="marco">
 		<button class="contenidohome">
-		<a href="\RealPagHOME\Amba\diseñodeinteriores.html">Diseño de interiores</a>
-		<a href=\RealPagHOME\Xilijibiñij\Historia.html>Historia</a>
-		<a href="\RealPagHOME\HomeEstructura.html">Estructura</a>
-		<a href="\RealPagHOME\index.html"> Inicio</a>
+		<a href="diseñodeinteriores.html">Diseño de interiores</a>
+		<a href="Historia.html">Historia</a>
+		<a href="HomeEstructura.html">Estructura</a>
+		<a href="index.html"> Inicio</a>
 		</button>
   </nav>
-  <img  src="\RealPagHOME\Amba\sal.PNG">
+  <img  src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/sal.PNG?raw=true">
 </header>
 
 <div id="clock"></div>
@@ -32,7 +32,7 @@
 	<p>
 		Un Dormitorio es un lugar sagrado este lugar debe lucir especial y hacerte sentir seguro y relajado. <br>
 
-		<img src="\RealPagHOME\Amba\habitacion.jpg">
+		<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/habitacion.jpg?raw=true">
 	</p>
 </span>
 
@@ -44,7 +44,7 @@
 	<p>
 	 baños más actuales que aúnan diseño, funcionalidad y estilo a través de materiales nuevos y mayor funcionalidad.<br>
 
-		<img src="\RealPagHOME\Amba\bños.jpg">
+		<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/b%C3%B1os.jpg?raw=true">
 	</p>
 </span>
 
@@ -56,7 +56,7 @@
 	<p>
 	Las cocinas modernas son estancias contemporáneas, que se caracterizan por su aspecto elegante de líneas rectas y lisas. <br>
 
-		<img src="\RealPagHOME\Amba\cocina.jpeg">
+		<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/cocina.jpeg?raw=true">
 	</p>
 </span>
 
@@ -67,7 +67,7 @@
 	<p>
 	La sala juega un papel muy importante en todas las casas, es el lugar de encuentro en donde se reúne la familia y los amigos.  <br>
 
-		<img src="\RealPagHOME\Amba\salas.jpeg">
+		<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/salas.jpeg?raw=true">
 	</p>
 </span>
 
@@ -78,7 +78,7 @@
 	<p>
 	La combinación de plantas y su ditribución es lo que va a determinar sin lugar a dudas el estilo que quieras darle.<br>
 
-		<img src="\RealPagHOME\Amba\jrdin.png">
+		<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/jrdin.PNG?raw=true">
 	</p>
 </span> <br>
 
@@ -98,8 +98,8 @@ Disfruta de las fotografías de las habitaciones más modernas: los armarios de 
 
 Redecora tu habitación de invitados para que sea un espacio versátil que puedas aprovechar, o descubre los muebles para las habitaciones infantiles que contribuyen con el desarrollo de los más pequeños.<br></h2>
 
-<img src="\RealPagHOME\Amba\f1.PNG"><td>
-<img src="\RealPagHOME\Amba\f2.PNG"><img src="\RealPagHOME\Amba\f3.PNG"><img src="\RealPagHOME\Amba\f4.PNG"></td>
+<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/f1.PNG?raw=true"><td>
+<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/f2.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/f3.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/f4.PNG?raw=true"></td>
 
 <h2>
 	<h3>textiles</h3>
@@ -109,7 +109,7 @@ Los tejidos y estampados pueden dar un aire completamente nuevo al interior de t
 ¿Sabes cómo elegir las mejores cortinas, alfombras, sábanas y colchas, fundas de sofá o cojines...? ¿Cuáles son los mejores colores y materiales para marcar estilo?<br>
 
 Te contamos los trucos de diseñadores de interiores y decoradores profesionales, te damos ideas traídas de las mejores casas modernas, y te adelantamos las tendencias en decoración para que renueves tu entorno.<br>
-<td><img src="TEXTILES.PNG"><img src="textiles2.PNG"><img src="textiles3.PNG"><img src="\RealPagHOME\Amba\cromatico.PNG"></td>
+<td><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/TEXTILES.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/textiles2.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/textiles3.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/cromatico.PNG?raw=true"></td>
 </section>
 
 </h2>
@@ -117,7 +117,7 @@ Te contamos los trucos de diseñadores de interiores y decoradores profesionales
 <h2><h3>BAÑOS</h3>Baños señoriales, urbanitas, contemporáneos, nórdicos, zen, rústicos… Se planifican y diseñan para transformarlos en ambientes que transmitan confort y calma. ¿De qué modo? A través de materiales y recursos variados: revestimientos que crean una atmósfera serena, volúmenes atractivos, texturas naturales o una iluminación óptima y regulable que induzca al relax. La mejor forma de renovar un baño oscuro y aburrido en un espacio luminoso, colorido y dinámico.<br>
 
 La tecnología, junto con el buen diseño que caracteriza al actual equipamiento para el baño, se fusionan para que tengamos un interiorismo más actualizado trabajado en baños pequeños modernos o de mayor tamaño. ¿Cuáles son los mejores estilos para el baño? Minimalista, industrial, clásico, contemporáneo, retro... Hay muchas posibilidades para realizar una bonita decoración del baño.<br>
-<td><img src="bño.PNG"><img src="bño2.PNG"><img src="bño3.PNG"></td>
+<td><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/b%C3%B11.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/b%C3%B12.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/b%C3%B13.PNG?raw=true"></td>
 
 <h3>UN BAÑO ORDENADO Y RELAJADO</h3>
 El cuarto de baño, que siempre asociamos a nuestro bienestar y relajación personal, es la estancia de la casa que más necesita lucir despejado tanto por limpieza e higiene como por la necesidad de transmitir calma. Cajones, estantes, cestas o toalleros eléctricos para ordenar con cabeza toallas, cosméticos y accesorios en este espacio tan personal.
@@ -125,7 +125,7 @@ El cuarto de baño, que siempre asociamos a nuestro bienestar y relajación pers
 A la hora de conocer las nuevas formas de renovar el baño, la primera idea es apiñar los sanitarios. Sin embargo, existen otras soluciones para rentabilizar el espacio sin que resulte angosto. Interesa que haya posibilidad de deambular por el espacio cómodamente y no tener problemas de movilidad; por eso, el diseño debe ser espacioso, diáfano y ordenado.
 
 La disposición ordenada del mobiliario y una correcta distribución hacen que, básicamente, tengamos una decoración en el baño confortable y funcional. Las tendencias para decorar el baño nos indican que los ambientes con estampados, texturizados y diseños inspirados en ambientes spa están ganando cada vez mayor importancia en el interiorismo. La idea es que se consiga un espacio relajado y cómodo.
-<td><img src="bñ1.PNG"><img src="bñ3.PNG"><img src="bñ2.PNG"><img src="bñ4.PNG"><img src="bñ5.PNG"><img src="bñ6.PNG"><img src="bño7.PNG"></td>
+<td><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/b%C3%B11.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/b%C3%B13.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/b%C3%B12.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/b%C3%B14.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/b%C3%B15.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/b%C3%B16.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/b%C3%B1o7.PNG?raw=true"></td>
 </h2>
 </article>
 </section>
@@ -134,7 +134,7 @@ La disposición ordenada del mobiliario y una correcta distribución hacen que, 
 	<h2><h3>COCINAS</h3>
 Las cocinas modernas son estancias contemporáneas, que se caracterizan por su aspecto elegante de líneas rectas y lisas. Sin embargo, las cocinas de estilo moderno no tienen por qué ser todas iguales, en serie. Se trata de un estilo muy variado que, efectivamente, tiene muchos puntos en común, pero con el que se puede conseguir un espacio único. Pero, ¿cuáles son esas cosas que comparten? Te enseñamos algunas propuestas de cocinas de diseño que te inspirarán para decorar la tuya. <br>
 
-<img src="cocina.jpeg">
+<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/cocina.jpeg?raw=true">
 <h3>CÓMO DECORAR UNA COCINA MODERNA</h3>
 Por norma general, una cocina moderna de abrirse al comedor, dando forma a un espacio que se integra con el resto de la casa. Estas cocinas son también funcionales: equipadas con las últimas tecnologías, pero sin tener aspecto de laboratorio. La iluminación es un gran aliado a la hora de conseguir un estilo moderno en la cocina.<br>
 
@@ -143,7 +143,7 @@ Una cocina moderna también debe incorporar elementos decorativos habituales en 
 Con qué materiales y colores decorarla
 Un material que da un toque moderno y lúdico a la cocina es la pizarra y un color, el blanco. Se adapta a la perfección a cualquier cocina y da mucho juego porque se puede usar para apuntar la lista de la compra, o bien como superficie para pintar. Se puede poner un panel en la pared, o bien directamente toda una pared entera que los niños puedan dibujar con tizas.<br>
 
-<td><img src="cn1.PNG"><img src="cn2.PNG"><img src="cn3.PNG"><img src="cn4.PNG"><img src="cn5.PNG"><img src="cn6.PNG"></td>
+<td><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/cn1.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/cn2.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/cn3.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/cn4.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/cn5.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/cn6.PNG?raw=true"></td>
 	</h2>
 </section>
 
@@ -152,7 +152,7 @@ Un material que da un toque moderno y lúdico a la cocina es la pizarra y un col
 		La sala juega un papel muy importante en todas las casas, es el lugar de encuentro en donde se reúne la familia y los amigos. Diseñamos espacios donde se propicien y disfruten las relaciones humanas. Somos muy cuidadosos en la selección del mobiliario, especialmente el estilo de sofás y sillones, el material, la textura, el color así como todos los detalles decorativos del espacio. La decoración de una sala es de vital importancia ya que puede considerarse el punto central de cualquier hogar y puede definir el estilo y ser el punto de partida del interiorismo de todos los demás espacios que lo conforman.<br>
 
 		AQUI TE DEJAMOS OTRAS IDEAS QUE TE PODRIAN GUSTAR!<br>
-		<td><img src="s2.PNG"><img src="s1.PNG"><img src="s3.PNG"><img src="s4.PNG"></td>
+		<td><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/s2.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/s1.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/s3.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/s4.PNG?raw=true"></td>
 	</h2>
 </section>
 <section>
@@ -160,40 +160,41 @@ Un material que da un toque moderno y lúdico a la cocina es la pizarra y un col
 
 		Quien tiene un patio en la ciudad, tiene un tesoro. Ocultos en el interior de las casas, estos espacios exteriores son el lugar perfecto para refugiarse de las altas temperaturas, crear un salón de exterior o un comedor al aire libre perfectamente decorado. Los patios son luz y frescura, pero hay que saber cómo decorarlos. La decoración de los patios no es fácil y hay que cuidarla. Lo ideal es buscar ideas que se asemejen al estilo decorativo del interior de la vivienda. Hay detalles que elevan el tono del patio y asombran aportando su diferencia. <br>
 
-		<td><img src="p1.PNG"><img src="p2.PNG"><img src="p3.PNG"><img src="p4.PNG"></td>
+		<td><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/p1.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/p2.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/p3.PNG?raw=true"><img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/p4.PNG?raw=true"></td>
 </h2>
 </section>
 <footer>&copy;2024 Us.Todos los derechos reservados.Creación:08/05/2024 . ultima actualización:15/05/2024</p></footer>
 <!--reloj-->
 
 <script>
-	function getClock(){
-		const date=new Date();
-		let hr=date.getHours();
-		let min=date.getMinutes();
-		let sec=date.getSeconds();
-		let perid="AM";
+        function getClock() {
+            const date = new Date();
+            let hr = date.getHours();
+            let min = date.getMinutes();
+            let sec = date.getSeconds();
+            let period = "AM";
 
-		if(hr==0){
-			hr=12;
-		}
-		if(hr>12){
-			hr=hr-12;
-			period="PM"
-		}
+            if (hr == 0) {
+                hr = 12;
+            }
+            if (hr > 12) {
+                hr = hr - 12;
+                period = "PM";
+            }
 
-		hr=("0"+hr).slice(-2);
-		min=("0"+min).slice(-2); 
-		sec=("0"+sec).slice(-2);
+            hr = ("0" + hr).slice(-2);
+            min = ("0" + min).slice(-2);
+            sec = ("0" + sec).slice(-2);
 
-		const day=date.getDate();
-		const month=date.getMonth()+1;
-		const year=date.getFullYear();
-		//document.getElementById("clock").innerHTML='${hr}:${min}:${sec}${period}-${month}/${day}/${year}';
-	}
+            const day = date.getDate();
+            const month = date.getMonth() + 1;
+            const year = date.getFullYear();
 
-	setInterval(getClock,1000);
-</script>
+            document.getElementById("clockDiv").innerHTML = `${hr}:${min}:${sec} ${period} - ${month}/${day}/${year}`;
+        }
+
+        setInterval(getClock, 1000);
+    </script>
 <!--fin reloj-->
 </body>
 </html>
