--- a/HomeEstructura.html
+++ b/HomeEstructura.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/png" href="\RealPagHOME\patitocasa.png">
+	<link rel="icon" type="image/png" href="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/patitocasa.png?raw=true">
 	<link rel="stylesheet" type="text/css" href="EstructuraStyle.css">
 	<title>Mi Hogar... Estructura</title>
 </head>
@@ -11,12 +11,12 @@
 <header>
 
 	<nav>
-		<img src="\RealPagHOME\imagenes\66-667897_victorian-border-frame-png.png" id="marco">
+		<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/66-667897_victorian-border-frame-png.png?raw=true" id="marco">
 		<button class="contenidohome">
-		<a href="\RealPagHOME\Amba\diseñodeinteriores.html">Diseño de interiores</a>
-		<a href=\RealPagHOME\Xilijibiñij\Historia.html>Historia</a>
-		<a href="\RealPagHOME\HomeEstructura.html">Estructura</a>
-		<a href="\RealPagHOME\index.html"> Inicio</a>
+		<a href="diseñodeinteriores.html">Diseño de interiores</a>
+		<a href="Historia.html">Historia</a>
+		<a href="HomeEstructura.html">Estructura</a>
+		<a href="index.html"> Inicio</a>
 		</button>
 	</nav>
 
@@ -38,7 +38,7 @@ Etimología: <br>
 El término "estructura" proviene del latín "structura", que significa "construcción" o "armazón". Este vocablo deriva de "struere", que significa "construir" o "apilar". Desde la antigüedad, la estructura ha sido una preocupación central en la construcción de edificaciones, desde las pirámides de Egipto hasta los modernos rascacielos, cada civilización ha desarrollado métodos y tecnologías para crear estructuras seguras y duraderas. <br> <br>
 
 Importancia: <br>
-La estructura es fundamental en la arquitectura por varias razones: <br> <br> <img src="/RealPagHOME/imagenes/wawawa1.jpg">
+La estructura es fundamental en la arquitectura por varias razones: <br> <br> <img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/wawawa1.jpg?raw=true">
 
 Seguridad: Una estructura bien diseñada asegura que la edificación pueda soportar todas las cargas y fuerzas a las que estará sometida a lo largo de su vida útil, evitando colapsos y fallas. <br> <br>
 Funcionalidad: La estructura permite la distribución de espacios interiores de manera eficiente, soportando pisos y techos sin obstrucciones innecesarias. <br> <br>
@@ -61,7 +61,7 @@ Sostenibilidad: Estructuras eficientes pueden reducir el consumo de materiales y
 </div>
   <div id="tetzto4"> <p> Adaptabilidad y Flexibilidad: <br> Las estructuras modernas a menudo necesitan adaptarse a cambios en el uso del edificio o en las cargas aplicadas. La flexibilidad en el diseño puede permitir futuras modificaciones sin comprometer la integridad estructural. </p> </div>
   <div class="center">
-    <img src="\RealPagHOME\imagenes\wawawa2.jpg" alt="Imagen central">
+    <img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/wawawa2.jpg?raw=true" alt="Imagen central">
   </div>
 </div>
 		</div>
@@ -73,25 +73,25 @@ Sostenibilidad: Estructuras eficientes pueden reducir el consumo de materiales y
 	<h4>Existen varios tipos de estructuras en la arquitectura, cada una con características específicas y usos adecuados según las necesidades del proyecto: </h4> <br> <br>
 
 <p id="cubitoizq">1.Estructuras de Marco o Armazón: Utilizan una combinación de columnas y vigas para crear una red tridimensional. Este tipo de estructura es común en edificios de gran altura debido a su capacidad para soportar grandes cargas y permitir espacios interiores abiertos. </p>
-<img src="/RealPagHOME/imagenes/structuMarcoOArmazon.jpg"> <br>
+<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/structuMarcoOArmazon.jpg?raw=true"> <br>
 
 <p id="cubitoderech">2.Estructuras de Mampostería: Construidas con bloques de piedra, ladrillo o concreto, las estructuras de mampostería son conocidas por su durabilidad y resistencia al fuego. Son comunes en edificios residenciales y pequeños comercios. </p>
-<img src="/RealPagHOME/imagenes/structuMamposteria.jpg"> <br>
+<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/structuMamposteria.jpg?raw=true"> <br>
 
 <p id="cubitoizq">3.Estructuras de Hormigón Armado: Utilizan una combinación de concreto y acero para aprovechar las ventajas de ambos materiales. El concreto proporciona resistencia a la compresión, mientras que el acero ofrece resistencia a la tracción. Este tipo de estructura es versátil y muy utilizada en una amplia variedad de edificios. </p> <br>
-<img src="/RealPagHOME/imagenes/structuAceroYHormigon.jpg"> <br>
+<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/structuAceroYHormigon.jpg?raw=true"> <br>
 
 <p id="cubitoderech">4.Estructuras de Acero: Caracterizadas por su alta resistencia y flexibilidad, las estructuras de acero son ideales para edificaciones que requieren grandes luces sin soportes intermedios, como estadios y centros de convenciones. </p> <br>
-<img src="/RealPagHOME/imagenes/structuAcero.jpg"> <br>
+<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/structuAcero.jpg?raw=true"> <br>
 
 <p id="cubitoizq">5.Estructuras de Madera: Utilizadas principalmente en viviendas y edificios de pequeña escala, las estructuras de madera son apreciadas por su sostenibilidad y facilidad de construcción. Con el avance de la ingeniería de la madera, ahora también se utilizan en edificios de mediana altura. </p> <br>
-<img src="/RealPagHOME/imagenes/structuMadera.jpg"> <br>
+<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/structuMadera.jpg?raw=true"> <br>
 
 <p id="cubitoderech">6.Estructuras Tensadas: Utilizan cables y membranas para soportar cargas. Son comunes en estructuras ligeras como carpas y cubiertas de estadios, permitiendo diseños innovadores y estéticamente atractivos. </p> <br>
-<img src="/RealPagHOME/imagenes/structuTensada.jpg"> <br>
+<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/structuTensada.jpg?raw=true"> <br>
 
 <p id="cubitoizq">7.Estructuras de Cáscara o Superficies: Aprovechan formas geométricas como bóvedas y cúpulas para distribuir las cargas de manera eficiente. Son utilizadas en edificios que requieren grandes espacios sin soportes intermedios, como auditorios y centros de exposiciones.</p> <br>
-<img src="/RealPagHOME/imagenes/structuCascaraOSuperficie.webp">
+<img src="https://github.com/PataRancia/PataRancia.github.io/blob/RealPagHOME/imagenes/structuCascaraOSuperficie.jpg?raw=true">
 
 
 </div>
